# pico-tflmicro

./: .gitignore  CMakeLists.txt  README.md  build_picos.sh
examples/micro_speech/: CMakeLists.txt  kws_model_settings.h  main.cpp
examples/micro_speech_large/: CMakeLists.txt  kws_model_data.cc  kws_model_settings.h  model_config.h
examples/micro_speech_small/: CMakeLists.txt  kws_model_data.cc  kws_model_settings.cc  kws_model_settings.h  main.cpp  model_config.h  tst_000000_Stop_7.h  yes_30ms_audio_data.cc  yes_30ms_audio_data.h
examples/person_detection/: main_functions.cpp
